--- a/proto2_main.ioc
+++ b/proto2_main.ioc
@@ -207,8 +207,11 @@ TIM1.Prescaler=8-1
 TIM15.IPParameters=Prescaler,Period
 TIM15.Period=1000-1
 TIM15.Prescaler=8-1
-TIM2.IPParameters=Period
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=Period,EncoderMode
 TIM2.Period=65535
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IPParameters=EncoderMode
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
